--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "atleast",
         "jsdelivr",
         "loggedin",
+        "morethan",
         "statuspage",
         "xenonmcx",
         "xframe"
