--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
         "XENONMC",
         "Xfaon",
         "atleast",
+        "grecaptcha",
         "jsdelivr",
         "loggedin",
         "morethan",
+        "sitekey",
         "statuspage",
         "xenonmcx",
         "xframe"
