--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,14 @@
         "XENONMC",
         "Xfaon",
         "atleast",
+        "creatorid",
         "grecaptcha",
         "jsdelivr",
         "loggedin",
         "morethan",
         "sitekey",
         "statuspage",
+        "topic",
         "xenonmcx",
         "xframe"
     ]
